# modern-tabular-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTEXT.md  Makefile  README.md  pyproject.toml
configs/training/: default.yaml
dbt/: .user.yml  FEATURES.md  GCS.md  GCS_INTEGRATION.md  GCS_SETUP.md  README.md  profiles.yml  setup_gcs.sh
dbt/telco_pipeline/: dbt_project.yml
dbt/telco_pipeline/models/features/: fct_churn_features.py  schema.yml
dbt/telco_pipeline/models/staging/: schema.yml  stg_churn.sql  stg_churn_gcs.sql
notebooks/: 01_exploratory_data_analysis.ipynb  02_model_training_optimization.ipynb  README.md
src/data/: loaders.py  schemas.py
src/models/: base.py  catboost.py
src/pipeline/: base.py  training.py
src/tasks/: train.py
